...
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wPU-um-L4h">
                                                <rect key="frame" x="28" y="0.0" width="112" height="24"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Number of people" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y0g-wK-YDX">
                                                <rect key="frame" x="28" y="0.0" width="112" height="24"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                <state key="normal" title="Book">
                                    <color key="titleColor" white="0.94999999999999996" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <locale key="locale" localeIdentifier="en_US"/>
                            </datePicker>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick a date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xeh-L1-bkh">
                                <rect key="frame" x="145.66666666666666" y="467.66666666666669" width="83.666666666666657" height="20.333333333333314"/>
                                <constraints>
...
                    </view>
                    <connections>
                        <outlet property="bucketButton" destination="05A-qT-jdx" id="dGU-OF-nz1"/>
                        <outlet property="collectionView" destination="kns-tA-iar" id="7XN-vB-zuD"/>
                        <outlet property="nameLabel" destination="V6t-XR-12I" id="QON-HV-eTH"/>
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bA1-Ze-kxa" userLabel="Minus">
                                                            <rect key="frame" x="63.333333333333343" y="0.0" width="34" height="34"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="plusButton"/>
                                                            <constraints>
                                                                <constraint firstAttribute="width" constant="34" id="s4u-K1-Ylf"/>
...
                                                    </constraints>
                                                </view>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Burger" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fpt-ec-SUz">
                                                    <rect key="frame" x="16.000000000000007" y="14.999999999999998" width="111.66666666666669" height="20.333333333333329"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                                        <rect key="frame" x="176.66666666666663" y="44" width="166.33333333333337" height="50"/>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="acceptButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="GG0-KE-dE5"/>
...
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                        <size key="titleShadowOffset" width="1" height="6"/>
                                        <state key="normal" title="Accept">
                                            <color key="titleColor" white="0.94999999999999996" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LfW-MS-pvb" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="2" title="Home" image="table1" id="r8V-mh-pyS"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Kbz-TZ-uka">
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Login Later">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title=" Continue with Facebook" image="ic_facebook">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
