<resources>
    <string name="app_name">OrderMe Mini</string>
    <string name="login_later">Login later</string>
    <string name="restaurants">Restaurants</string>
    <string name="back">Back</string>
</resources>