appId: com.assesment.orderme
onFlowStart:
  - runFlow: ../helpers/_bootstrap.yaml
---
- tapOn: "Login Later"
- scroll
- tapOn: "Burger"
- assertVisible: "Reservation"
- tapOn: "Reservation"
- assertVisible: "Book"
- tapOn: "Phone number"
- inputRandomNumber
- tapOn: "Number of people"
- inputText: "4"
- tapOn: "Pick a date"
- tapOn: "Book"
- runFlow:
    when:
        visible: "You did not login"
    commands:
        - tapOn: "Login"
- assertVisible: " Continue with Facebook"
