appId: com.assesment.orderme
---
- assertVisible: "Reservation"
- tapOn: "Reservation"
- assertVisible: "Book"
- tapOn: "Phone number"
- inputRandomNumber
- tapOn: "Number of people"
- inputRandomNumber:
    length: 1
- tapOn: "Pick a date"
- tapOn: "Book"
