appId: com.assesment.orderme
---
- launchApp:
    clearState: true
    arguments:
      BASE_URL: http://127.0.0.1:8080
      IS_E2E: true
- tapOn: "Login Later"
- tapOn: "Hakkasan"
- runFlow: ../subflows/table-reservation.yaml
- runFlow:
    when:
        visible: "You did not login"
    commands:
        - tapOn: "Login"
        - runFlow: ../subflows/login-screen-assertion.yaml
