appId: com.assesment.orderme
env:
  restaurantName: ${restaurantName || "Hakkasan"}
onFlowStart:
  - runFlow: ../../helpers/_bootstrap.yaml
---
- tapOn: "Login Later"
- tapOn: ${restaurantName}
- runFlow:
    file: ../../subflows/screens/table-reservation.yaml
    env:
      restaurantName: ${restaurantName}
- runFlow:
    when:
        visible: "You did not login"
    commands:
        - tapOn: "Login"
        - runFlow: ../../subflows/screens/login-screen-assertion.yaml
